2007-09-11  Sven Herzberg  <sven@imendio.com>

        Reviewed by Mark.

        Remove unnecessary fields in FontPlatformData
        http://bugs.webkit.org/show_bug.cgi?id=15177

        * platform/gdk/FontDataGdk.cpp: removed the destroy code of the fields
        that have been removed
        * platform/gdk/FontPlatformData.h: removed m_fontFace, m_fontMatrix
        and m_options; hask on m_scaledFont
        * platform/gdk/FontPlatformDataGdk.cpp: simplified setFont() by using
        m_scaledFont only; turned the former struct members into local
        variables

2007-09-11  George Staikos  <staikos@kde.org>

        Reviewed by Anders.

        Work around gcc bug with some old gcc versions.

        * platform/qt/WidgetQt.cpp:
        (WebCore::Widget::convertToContainingWindow):
        (WebCore::Widget::convertFromContainingWindow):

2007-09-10  Mitz Pettel  <mitz@webkit.org>

        Reviewed by Maciej Stachowiak.

        - fix http://bugs.webkit.org/show_bug.cgi?id=15157
          Image defined in background-position: top center gets unexpectedly truncated
          <rdar://problem/5469095>

        Test: fast/repaint/body-background-image.html

        * rendering/RenderBox.cpp:
        (WebCore::RenderBox::imageChanged): Refined the logic for when the root takes
        over painting the background, to match paintBoxDecorations(). In particular,
        if the root has defined a background, the body should paint its own background.

2007-09-10  David Harrison  <harrison@apple.com>

        Reviewed by Kevin and Tristan.

        Tests added:
        * editing/pasteboard/paste-into-anchor-text.html: Added.
        * editing/pasteboard/paste-table-cells.html: Added.

        Source changes:
        * editing/CompositeEditCommand.cpp:
        (WebCore::CompositeEditCommand::positionAvoidingSpecialElementBoundary):
        Nil check enclosingAnchor.
        
        * editing/ReplaceSelectionCommand.cpp: